--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}{{ pageTitle }} | {{ siteTitle }}{% endblock %}</title>
         <link rel="icon" href="{{ asset('img/glider.svg') }}">
         {# <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>"> #}
         {% block stylesheets %}
@@ -16,16 +16,22 @@
     </head>
     <body>
         <header class="site-header">
-            <span class="site-title">My Symfony Site</span>
+            <span class="site-title">MVC</span>
 
-            <nav>
+            <nav class="navbar">
                 <ul>
-                    <li><a href="{{ path('home') }}">Home</a></li>
-                    <li><a href="{{ path('about') }}">About</a></li>
+                    <li><a href="{{ path('home') }}">Hem</a></li>
+                    <li><a href="{{ path('about') }}">Om MVC</a></li>
+                    <li><a href="{{ path('report') }}">Redovisning</a></li>
                     <li><a href="{{ path('lucky_number') }}">Lucky number</a></li>
                 </ul>
             </nav>
         </header>
+
         {% block body %}{% endblock %}
+
+        <footer class="footer">
+            <p>Copyright &copy; 2024 Olof Jönsson</p>
+        </footer>
     </body>
 </html>
