--- a/assets/styles/scss/partials/base/_base.scss
+++ b/assets/styles/scss/partials/base/_base.scss
@@ -14,21 +14,33 @@ body {
 .body {
     display: flex;
     flex-direction: column;
-    align-items: center;
     background-color: var.$bg-color-body;
 }
 
-.header {
+.site-header {
     width: 100%;
     min-height: var.$baseline-x4;
     flex: 0 0 auto;
 }
 
-.main {
+.content-wrapper {
     width: 100%;
     flex: 1 0 auto;
-    max-width: 700px;
     padding: var.$baseline-x2;
+    display: flex;
+    gap: var.$baseline-x2;
+}
+
+.main {
+    width: 100%;
+    // flex: 1 0 auto;
+    max-width: 1000px;
+    // padding: var.$baseline-x2;
+}
+
+.aside {
+    width: 100%;
+    max-width: 200px;
 }
 
 .footer {
