--- a/assets/styles/scss/partials/base/_header.scss
+++ b/assets/styles/scss/partials/base/_header.scss
@@ -2,7 +2,7 @@
 
 @use "../variables" as var;
 
-.header {
+.site-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
