--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,24 +14,27 @@
             {% block importmap %}{{ importmap('app') }}{% endblock %}
         {% endblock %}
     </head>
-    <body>
+    <body class="body">
         <header class="site-header">
             <span class="site-title">MVC</span>
 
-            <nav class="navbar">
+            <nav class="nav">
                 <ul>
                     <li><a href="{{ path('home') }}">Hem</a></li>
-                    <li><a href="{{ path('about') }}">Om MVC</a></li>
+                    <li><a href="{{ path('about') }}">Om</a></li>
                     <li><a href="{{ path('report') }}">Redovisning</a></li>
-                    <li><a href="{{ path('lucky_number') }}">Lucky number</a></li>
+                    <li><a href="{{ path('lucky') }}">Lucky</a></li>
+                    <li><a href="{{ path('api') }}">API</a></li>
                 </ul>
             </nav>
         </header>
 
-        {% block body %}{% endblock %}
+        <div class="content-wrapper">
+            {% block body %}{% endblock %}
+        </div>
 
         <footer class="footer">
-            <p>Copyright &copy; 2024 Olof Jönsson</p>
+            <p>Copyright &copy; 2024 Olof Jönsson - oljn22</p>
         </footer>
     </body>
 </html>
