--- a/templates/about.html.twig
+++ b/templates/about.html.twig
@@ -1,10 +1,10 @@
 {% extends "base.html.twig" %}
 
 {% block body %}
-    <main class="main">
+    <main class="main text-container">
         {{ include('content/about.md')|markdown_to_html }}
     </main>
-    <div class="aside">
+    <div class="aside aside-bottom">
         {{ include('content/about-aside.md')|markdown_to_html }}
     </div>
 {% endblock %}
