--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,7 +16,11 @@
     </head>
     <body class="body">
         <header class="site-header">
-            <span class="site-title">MVC</span>
+            <span class="site-title">
+                <a href="{{ path('home') }}">
+                    MVC
+                </a>
+            </span>
 
             <nav class="nav">
                 <ul>
