--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,7 +1,7 @@
 {% extends "base.html.twig" %}
 
 {% block body %}
-    <main class="main">
+    <main class="main text-container">
         {{ include('content/home.md')|markdown_to_html }}
     </main>
 {% endblock %}
