--- a/templates/lucky.html.twig
+++ b/templates/lucky.html.twig
@@ -1,7 +1,7 @@
 {% extends "base.html.twig" %}
 
 {% block body %}
-    <main class="main">
+    <main class="main text-container">
         <h1>{{ pageTitle }}</h1>
 
         <p>Ladda om sidan för att visa en ny bild...</p>
