--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,17 +1,695 @@
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400&family=Josefin+Slab:ital,wght@0,400;0,500;0,700;1,400;1,500&display=swap");
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+/* Document
+   ========================================================================== */
+/**
+ * 1. Correct the line height in all browsers.
+ * 2. Prevent adjustments of font size after orientation changes in iOS.
+ */
+html {
+  line-height: 1.15; /* 1 */
+  -webkit-text-size-adjust: 100%; /* 2 */
+}
+
+/* Sections
+   ========================================================================== */
+/**
+ * Remove the margin in all browsers.
+ */
 body {
-    background-color: skyblue;
+  margin: 0;
+}
+
+/**
+ * Render the `main` element consistently in IE.
+ */
+main {
+  display: block;
+}
+
+/**
+ * Correct the font size and margin on `h1` elements within `section` and
+ * `article` contexts in Chrome, Firefox, and Safari.
+ */
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+
+/* Grouping content
+   ========================================================================== */
+/**
+ * 1. Add the correct box sizing in Firefox.
+ * 2. Show the overflow in Edge and IE.
+ */
+hr {
+  box-sizing: content-box; /* 1 */
+  height: 0; /* 1 */
+  overflow: visible; /* 2 */
+}
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+pre {
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
+}
+
+/* Text-level semantics
+   ========================================================================== */
+/**
+ * Remove the gray background on active links in IE 10.
+ */
+a {
+  background-color: transparent;
+}
+
+/**
+ * 1. Remove the bottom border in Chrome 57-
+ * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
+ */
+abbr[title] {
+  border-bottom: none; /* 1 */
+  text-decoration: underline; /* 2 */
+  text-decoration: underline dotted; /* 2 */
+}
+
+/**
+ * Add the correct font weight in Chrome, Edge, and Safari.
+ */
+b,
+strong {
+  font-weight: bolder;
+}
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+code,
+kbd,
+samp {
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
+}
+
+/**
+ * Add the correct font size in all browsers.
+ */
+small {
+  font-size: 80%;
+}
+
+/**
+ * Prevent `sub` and `sup` elements from affecting the line height in
+ * all browsers.
+ */
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+sup {
+  top: -0.5em;
+}
+
+/* Embedded content
+   ========================================================================== */
+/**
+ * Remove the border on images inside links in IE 10.
+ */
+img {
+  border-style: none;
+}
+
+/* Forms
+   ========================================================================== */
+/**
+ * 1. Change the font styles in all browsers.
+ * 2. Remove the margin in Firefox and Safari.
+ */
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit; /* 1 */
+  font-size: 100%; /* 1 */
+  line-height: 1.15; /* 1 */
+  margin: 0; /* 2 */
+}
+
+/**
+ * Show the overflow in IE.
+ * 1. Show the overflow in Edge.
+ */
+button,
+input { /* 1 */
+  overflow: visible;
+}
+
+/**
+ * Remove the inheritance of text transform in Edge, Firefox, and IE.
+ * 1. Remove the inheritance of text transform in Firefox.
+ */
+button,
+select { /* 1 */
+  text-transform: none;
+}
+
+/**
+ * Correct the inability to style clickable types in iOS and Safari.
+ */
+button,
+[type=button],
+[type=reset],
+[type=submit] {
+  -webkit-appearance: button;
+}
+
+/**
+ * Remove the inner border and padding in Firefox.
+ */
+button::-moz-focus-inner,
+[type=button]::-moz-focus-inner,
+[type=reset]::-moz-focus-inner,
+[type=submit]::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
+/**
+ * Restore the focus styles unset by the previous rule.
+ */
+button:-moz-focusring,
+[type=button]:-moz-focusring,
+[type=reset]:-moz-focusring,
+[type=submit]:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+
+/**
+ * Correct the padding in Firefox.
+ */
+fieldset {
+  padding: 0.35em 0.75em 0.625em;
+}
+
+/**
+ * 1. Correct the text wrapping in Edge and IE.
+ * 2. Correct the color inheritance from `fieldset` elements in IE.
+ * 3. Remove the padding so developers are not caught out when they zero out
+ *    `fieldset` elements in all browsers.
+ */
+legend {
+  box-sizing: border-box; /* 1 */
+  color: inherit; /* 2 */
+  display: table; /* 1 */
+  max-width: 100%; /* 1 */
+  padding: 0; /* 3 */
+  white-space: normal; /* 1 */
+}
+
+/**
+ * Add the correct vertical alignment in Chrome, Firefox, and Opera.
+ */
+progress {
+  vertical-align: baseline;
+}
+
+/**
+ * Remove the default vertical scrollbar in IE 10+.
+ */
+textarea {
+  overflow: auto;
+}
+
+/**
+ * 1. Add the correct box sizing in IE 10.
+ * 2. Remove the padding in IE 10.
+ */
+[type=checkbox],
+[type=radio] {
+  box-sizing: border-box; /* 1 */
+  padding: 0; /* 2 */
+}
+
+/**
+ * Correct the cursor style of increment and decrement buttons in Chrome.
+ */
+[type=number]::-webkit-inner-spin-button,
+[type=number]::-webkit-outer-spin-button {
+  height: auto;
+}
+
+/**
+ * 1. Correct the odd appearance in Chrome and Safari.
+ * 2. Correct the outline style in Safari.
+ */
+[type=search] {
+  -webkit-appearance: textfield; /* 1 */
+  outline-offset: -2px; /* 2 */
+}
+
+/**
+ * Remove the inner padding in Chrome and Safari on macOS.
+ */
+[type=search]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+/**
+ * 1. Correct the inability to style clickable types in iOS and Safari.
+ * 2. Change font properties to `inherit` in Safari.
+ */
+::-webkit-file-upload-button {
+  -webkit-appearance: button; /* 1 */
+  font: inherit; /* 2 */
+}
+
+/* Interactive
+   ========================================================================== */
+/*
+ * Add the correct display in Edge, IE 10+, and Firefox.
+ */
+details {
+  display: block;
+}
+
+/*
+ * Add the correct display in all browsers.
+ */
+summary {
+  display: list-item;
+}
+
+/* Misc
+   ========================================================================== */
+/**
+ * Add the correct display in IE 10+.
+ */
+template {
+  display: none;
+}
+
+/**
+ * Add the correct display in IE 10.
+ */
+[hidden] {
+  display: none;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 100%;
 }
 
 body {
-    margin: 0 auto;
-    max-width: 1000px;
+  overflow-y: scroll;
 }
 
 .site-header {
-    background: url('../images/background.jpg');
-    background-size: cover;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 0.7rem 2.8rem;
+  border-bottom: 3px solid #004848;
+  background-color: rgba(0, 0, 0, 0.4);
+  color: #A17317;
+}
+
+.site-title {
+  margin-right: 1.4rem;
+}
+
+.nav ul {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.nav li {
+  padding: 0;
+  margin: 0;
+}
+.nav a {
+  text-decoration: none;
+  display: block;
+  padding: 0 1.4rem;
+}
+.nav li:first-of-type a {
+  padding-left: 0;
+}
+.nav li:last-of-type a {
+  padding-right: 0;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1.4rem 2.8rem;
+  border-top: 3px solid #004848;
+  background-color: rgba(0, 0, 0, 0.4);
+  color: #DEB055;
+}
+.footer p,
+.footer ul {
+  margin: 0;
+}
+
+html,
+body {
+  min-height: 100vh;
+}
+
+.body {
+  display: flex;
+  flex-direction: column;
+  background-color: #0d100d;
+}
+
+.site-header {
+  width: 100%;
+  min-height: 5.6rem;
+  flex: 0 0 auto;
+}
+
+.content-wrapper {
+  width: 100%;
+  flex: 1 0 auto;
+  padding: 2.8rem;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.main {
+  width: 100%;
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
+.aside {
+  width: 100%;
+  max-width: 200px;
+}
+
+.footer {
+  width: 100%;
+  min-height: 5.6rem;
+  flex: 0 0 auto;
+}
+
+code {
+  margin: 0 0.1em;
+  padding: 0.2em 0.4em;
+  border: 1px solid #525652;
+  border-radius: 3px;
+  background: rgba(255, 255, 255, 0.05);
+  font-family: monospace;
+  font-size: 0.85rem;
+  line-height: 2;
+}
+
+pre {
+  padding: 0.7rem;
+  border: 1px solid #525652;
+  border-radius: 5px;
+  background: rgba(255, 255, 255, 0.05);
+}
+pre code {
+  display: block;
+  margin: 0;
+  border: 0 none;
+  background: transparent;
+  overflow-x: auto;
+  line-height: 1.4;
+}
+
+.header-xs, .header-sm, h4,
+.header-m, h3,
+.header-lg, h2, h1 {
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: 100;
+  text-transform: uppercase;
+  letter-spacing: 0.03em;
+  margin: 0;
+}
+
+.site-header .site-title {
+  font-size: 2.8561rem;
+  font-weight: 700;
+  text-transform: lowercase;
+}
+.site-header .nav a {
+  font-size: 1.69rem;
+  font-weight: 300;
+  color: #C7942E;
+  text-transform: lowercase;
+}
+
+.footer {
+  text-transform: lowercase;
+}
+.footer * {
+  font-size: 1.3rem;
+}
+
+.body {
+  font-family: "Josefin Slab", monospace;
+  line-height: 1.4;
+  letter-spacing: 0.08em;
+  color: #fff;
+}
+
+.text-container {
+  max-width: 700px;
+}
+
+p {
+  font-size: 1rem;
+  font-weight: 400;
+  margin: 0;
+  margin-bottom: 1.4rem;
+}
+
+a {
+  color: #C7942E;
+  text-decoration: none;
 }
 
 h1 {
-    border-bottom: 4px double #ccc;
-}   
+  font-size: 2.8561rem;
+  margin-bottom: 2.8rem;
+}
+
+h2 {
+  margin-bottom: 1.4rem;
+  font-size: 2.197rem;
+}
+
+h3,
+.header-lg {
+  margin-bottom: 1.4rem;
+  font-size: 1.69rem;
+  font-weight: 200;
+}
+
+h4,
+.header-m {
+  font-size: 1.3rem;
+  font-weight: 200;
+}
+
+p + h1,
+p + h2,
+p + h3 {
+  margin-top: 2.8rem;
+}
+
+.header-sm {
+  font-size: 1rem;
+  font-weight: 300;
+}
+
+.header-xs {
+  font-size: 0.7692307692rem;
+  font-weight: 300;
+}
+
+section {
+  margin-bottom: 5.6rem;
+}
+
+ul {
+  padding: 0;
+}
+
+li {
+  list-style: none;
+  margin-bottom: 0.7rem;
+}
+
+.img {
+  margin-bottom: 1.4rem;
+  border-radius: 5px;
+  overflow: hidden;
+  filter: brightness(0.85);
+}
+
+figure,
+picture {
+  margin: 0;
+  display: flex;
+}
+
+.profile-img {
+  float: left;
+  margin-right: 1.4rem;
+  margin-bottom: 0.7rem;
+}
+
+.library-img {
+  width: 100%;
+}
+
+@media (max-width: 900px) {
+  .nav ul {
+    gap: 0.7rem;
+  }
+  .nav li a {
+    padding: 0;
+  }
+  .nav a {
+    padding: 0 0.7rem;
+  }
+}
+@media (max-width: 1000px) {
+  .footer > * {
+    width: 100%;
+  }
+  .footer .social {
+    justify-content: space-evenly;
+    gap: 0;
+  }
+  .footer ul {
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
+  .footer li {
+    display: flex;
+    justify-content: center;
+    width: 40%;
+    flex-shrink: 1;
+  }
+  .footer p {
+    text-align: center;
+  }
+}
+@media (max-width: 480px) {
+  .footer ul {
+    flex-direction: column;
+    align-items: center;
+  }
+  .footer li {
+    display: block;
+    width: auto;
+  }
+}
+@media (max-width: 650px) {
+  .content-wrapper,
+  .footer {
+    padding: 1.4rem;
+  }
+  .site-header {
+    padding: 0.7rem 1.4rem;
+  }
+}
+@media (max-width: 1150px) {
+  .aside-bottom {
+    max-width: 700px;
+    margin: 0 auto;
+    margin-top: 2.8rem;
+  }
+  .aside-top {
+    max-width: 700px;
+    margin: 0 auto;
+    margin-bottom: 1.4rem;
+    order: -1;
+  }
+  .aside-top h2 {
+    display: none;
+  }
+  .aside-top ul {
+    display: flex;
+    flex-flow: row wrap;
+    gap: 1.4rem;
+  }
+}
+@media (max-width: 900px) {
+  .header .site-title {
+    font-size: 2.0736rem;
+  }
+  .header .nav a {
+    font-size: 1.44rem;
+  }
+  .footer * {
+    font-size: 1.2rem;
+  }
+  h1 {
+    font-size: 2.0736rem;
+  }
+  h2 {
+    font-size: 1.728rem;
+  }
+  h3 {
+    font-size: 1.44rem;
+  }
+  h4 {
+    font-size: 1.2rem;
+  }
+  .header-lg {
+    font-size: 1.44rem;
+  }
+  .header-m {
+    font-size: 1.2rem;
+  }
+  .header-xs {
+    font-size: 0.8333333333rem;
+  }
+  .introduction {
+    font-size: 1.2rem;
+  }
+  blockquote {
+    font-size: 1.2rem;
+  }
+  .tour-list {
+    font-size: 1.2rem;
+  }
+}
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+@media (max-width: 550px) {
+  .profile-img {
+    float: none;
+    padding: 0;
+    margin-bottom: 1.4rem;
+  }
+}
