--- a/assets/styles/scss/partials/base/_base.scss
+++ b/assets/styles/scss/partials/base/_base.scss
@@ -28,14 +28,14 @@ body {
     flex: 1 0 auto;
     padding: var.$baseline-x2;
     display: flex;
-    gap: var.$baseline-x2;
+    flex-wrap: wrap;
+    // gap: var.$baseline-x2;
 }
 
 .main {
     width: 100%;
-    // flex: 1 0 auto;
     max-width: 1000px;
-    // padding: var.$baseline-x2;
+    margin: 0 auto;
 }
 
 .aside {
