--- a/assets/styles/scss/partials/base/_navigation.scss
+++ b/assets/styles/scss/partials/base/_navigation.scss
@@ -7,6 +7,7 @@
 .nav {
     ul {
         display: flex;
+        flex-wrap: wrap;
         list-style: none;
         margin: 0;
         padding: 0;
