--- a/templates/api.html.twig
+++ b/templates/api.html.twig
@@ -1,7 +1,7 @@
 {% extends "base.html.twig" %}
 
 {% block body %}
-    <main class="main">
+    <main class="main text-container">
         <h1>{{ pageTitle }}</h1>
 
         <h2 class="header-m">Följande API:er finns tillgängliga:</h2>
