--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="sv">
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}{{ pageTitle }} | {{ siteTitle }}{% endblock %}</title>
