make excercise 'symfony-write-application-code'

--- a/assets/styles/scss/partials/_buttons.scss
+++ b/assets/styles/scss/partials/_buttons.scss
@@ -29,7 +29,8 @@
 
 .btn-container {
     display: flex;
-    flex-direction: column;
-    justify-content: start;
+    // flex-direction: column;
+    // justify-content: space-evenly;
+    gap: var.$baseline;
     margin-bottom: var.$baseline;
 }
