--- a/assets/styles/scss/partials/_variables.scss
+++ b/assets/styles/scss/partials/_variables.scss
@@ -98,7 +98,7 @@ $bg-color-highlights: $transparent-dark;
 $bg-color-cph-award: $transparent-light;
 $bg-color-button: $transparent;
 $bg-color-btn-strong: $green-dark;
-$bg-color-hover: $green-super-dark;
+$bg-color-hover: $yellow-4;
 $bg-color-blockquote: $transparent-mid;
 $bg-color-list-1: $transparent;
 $bg-color-list-2: $transparent-mid;
@@ -108,7 +108,7 @@ $bg-flash: $transparent-super-dark;
 // borders
 $border-header: $blue-green-4;
 $border-footer: $blue-green-4;
-$border-regular: $green-main;
+$border-regular: $yellow-3;
 $border-dark: $green-dark;
 $border-alternate: $yellow-0;
 $border-code: $grey-dark;
