--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -4,7 +4,8 @@
 @use "partials/typography/typography";
 // @use "partials/backgrounds";
 @use "partials/images";
-// @use "partials/form";
-// @use "partials/buttons";
+@use "partials/dice";
+@use "partials/form";
+@use "partials/buttons";
 // @use "partials/flash-msg";
 @use "partials/responsive/responsive";
