--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -440,7 +440,7 @@ pre code {
   line-height: 1.4;
 }
 
-.header-xs, .header-sm, h4,
+.form label, .header-xs, .header-sm, h4,
 .header-m, h3,
 .header-lg, h2, h1 {
   font-family: "Josefin Sans", sans-serif;
@@ -565,6 +565,86 @@ picture {
 
 .library-img {
   width: 100%;
+}
+
+.dice-graphic {
+  font-size: 40px;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  width: min(400px, 80%);
+  font-family: inherit;
+  font-size: 1rem;
+  margin: 0;
+  margin-bottom: 1.4rem;
+}
+.form label {
+  display: block;
+  margin-bottom: 0.35rem;
+  font-weight: 300;
+}
+.form input {
+  width: 100%;
+  padding: 0.7rem;
+  border: 1px solid #A17317;
+  border-radius: 3px;
+  font-family: inherit;
+  background-color: transparent;
+  color: inherit;
+  margin-bottom: 1.4rem;
+}
+.form textarea {
+  width: 100%;
+  padding: 0.35rem;
+  border: 1px solid #A17317;
+  border-radius: 3px;
+  height: 11.2rem;
+  font-family: inherit;
+  background-color: transparent;
+  color: inherit;
+  margin-bottom: 1.4rem;
+}
+.form .button {
+  width: fit-content;
+}
+.form input:focus,
+.form textarea:focus {
+  outline: 2px solid #A17317;
+}
+
+.button {
+  display: block;
+  padding: 0.7rem 1.4rem;
+  border: 1px solid #A17317;
+  border-radius: 3px;
+  background-color: rgba(0, 0, 0, 0);
+  color: #C7942E;
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 0.03em;
+}
+
+.btn-book {
+  background-color: #0B6F00;
+  color: #fff;
+  box-shadow: 0 0 20px rgba(255, 255, 255, 0.6);
+}
+
+.button:hover {
+  background-color: #785000;
+  color: #fff;
+  cursor: pointer;
+}
+
+.btn-container {
+  display: flex;
+  gap: 1.4rem;
+  margin-bottom: 1.4rem;
 }
 
 @media (max-width: 900px) {
