--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400&family=Josefin+Slab:ital,wght@0,400;0,500;0,700;1,400;1,500&display=swap");
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
@@ -645,6 +646,30 @@ picture {
   display: flex;
   gap: 1.4rem;
   margin-bottom: 1.4rem;
+}
+
+.flash-notice {
+  padding: 0.5em;
+  color: #004085;
+  background-color: #cce5ff;
+  border-color: #b8daff;
+  font-weight: 600;
+}
+
+.flash-notice:before {
+  content: "ⓘ";
+}
+
+.flash-warning {
+  padding: 0.5em;
+  color: #856404;
+  background-color: #fff3cd;
+  border-color: #ffeeba;
+  font-weight: 600;
+}
+
+.flash-warning:before {
+  content: "⚠";
 }
 
 @media (max-width: 900px) {
