--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -7,5 +7,5 @@
 @use "partials/dice";
 @use "partials/form";
 @use "partials/buttons";
-// @use "partials/flash-msg";
+@use "partials/flash";
 @use "partials/responsive/responsive";
