--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -2,6 +2,6 @@
 
 {% block body %}
     <main class="main text-container">
-        {{ include('content/home.md')|markdown_to_html }}
+        {{ include('main/content/home.md')|markdown_to_html }}
     </main>
 {% endblock %}
