--- a/templates/main/report.html.twig
+++ b/templates/main/report.html.twig
@@ -7,42 +7,42 @@
 
             <section>
                 <h2 id="kmom01">kmom01</h2>
-                {{ include('content/report/kmom01.md')|markdown_to_html }}
+                {{ include('main/content/report/kmom01.md')|markdown_to_html }}
             </section>
 
             <section>
                 <h2 id="kmom02">kmom02</h2>
-                {{ include('content/report/kmom02.md')|markdown_to_html }}
+                {{ include('main/content/report/kmom02.md')|markdown_to_html }}
             </section>
 
             <section>
                 <h2 id="kmom03">kmom03</h2>
-                {{ include('content/report/kmom03.md')|markdown_to_html }}
+                {{ include('main/content/report/kmom03.md')|markdown_to_html }}
             </section>
 
             <section>
                 <h2 id="kmom04">kmom04</h2>
-                {{ include('content/report/kmom04.md')|markdown_to_html }}
+                {{ include('main/content/report/kmom04.md')|markdown_to_html }}
             </section>
 
             <section>
                 <h2 id="kmom05">kmom05</h2>
-                {{ include('content/report/kmom05.md')|markdown_to_html }}
+                {{ include('main/content/report/kmom05.md')|markdown_to_html }}
             </section>
 
             <section>
                 <h2 id="kmom06">kmom06</h2>
-                {{ include('content/report/kmom06.md')|markdown_to_html }}
+                {{ include('main/content/report/kmom06.md')|markdown_to_html }}
             </section>
 
             <section>
                 <h2 id="kmom07">kmom07</h2>
-                {{ include('content/report/kmom07.md')|markdown_to_html }}
+                {{ include('main/content/report/kmom07.md')|markdown_to_html }}
             </section>
         </article>
     </main>
 
     <div class="aside aside-top">
-        {{ include('content/report/aside.md')|markdown_to_html }}
+        {{ include('main/content/report/aside.md')|markdown_to_html }}
     </div>
 {% endblock %}
