--- a/assets/styles/scss/partials/_variables.scss
+++ b/assets/styles/scss/partials/_variables.scss
@@ -77,6 +77,7 @@ $color-header: $yellow-3;
 $color-footer: $yellow-2;
 $color-nav-links: $yellow-0;
 
+$color-btn-del: $white;
 $color-blockquote: $green-light;
 $color-echoes-of-time: $green-dark;
 $color-text-stroke: $grey-light;
@@ -97,6 +98,8 @@ $bg-color-content: $transparent-dark;
 $bg-color-highlights: $transparent-dark;
 $bg-color-cph-award: $transparent-light;
 $bg-color-button: $transparent;
+$bg-color-button-del: $red-0;
+$bg-color-button-del-hover: $red-3;
 $bg-color-btn-strong: $green-dark;
 $bg-color-hover: $yellow-4;
 $bg-color-blockquote: $transparent-mid;
