--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -8,4 +8,5 @@
 @use "partials/form";
 @use "partials/buttons";
 @use "partials/flash";
+@use "partials/containers";
 @use "partials/responsive/responsive";
