--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,6 +29,9 @@
                     <li><a href="{{ path('report') }}">Redovisning</a></li>
                     <li><a href="{{ path('lucky') }}">Lucky</a></li>
                     <li><a href="{{ path('api') }}">API</a></li>
+                    <li><a href="{{ path('pig_start') }}">pig</a></li>
+                    <li><a href="{{ path('session') }}">session</a></li>
+                    {# <li><a href="{{ path('card') }}">card</a></li> #}
                 </ul>
             </nav>
         </header>
