--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,7 +31,7 @@
                     <li><a href="{{ path('api') }}">API</a></li>
                     <li><a href="{{ path('pig_start') }}">pig</a></li>
                     <li><a href="{{ path('session') }}">session</a></li>
-                    {# <li><a href="{{ path('card') }}">card</a></li> #}
+                    <li><a href="{{ path('card_start') }}">card</a></li>
                 </ul>
             </nav>
         </header>
