--- a/templates/card/start.html.twig
+++ b/templates/card/start.html.twig
@@ -6,9 +6,9 @@
 
         <ul>
             <li><a href="{{ path('card_start') }}">Start</a></li>
-            {# <li><a href="{{ path('card_deck') }}">Start</li>
-            <li><a href="{{ path('card_draw') }}">Start</li>
-            <li><a href="{{ path('card_shuffle') }}">Start</li> #}
+            <li><a href="{{ path('card_deck') }}">Kortlek</li>
+            <li><a href="{{ path('card_deck_shuffle') }}">Blandad Kortlek</li>
+            <li><a href="{{ path('card_deck_draw') }}">Dra kort</li>
         </ul>
     </main>
 {% endblock %}
