--- a/templates/card/deck_draw.html.twig
+++ b/templates/card/deck_draw.html.twig
@@ -4,5 +4,13 @@
     <main class="main text-container">
         <h1>{{ pageTitle }}</h1>
 
+        <div class="cards">
+            {% for card in cardDraw %}
+                <span class="card">{{ card }}</span>
+            {% endfor %}
+        </div>
+
+        <p>{{ deckCount }} kort kvar i leken.</p>
+
     </main>
 {% endblock %}
