--- a/templates/card/deck_shuffle.html.twig
+++ b/templates/card/deck_shuffle.html.twig
@@ -4,5 +4,11 @@
     <main class="main text-container">
         <h1>{{ pageTitle }}</h1>
 
+        <div class="cards">
+            {% for card in allCards %}
+                <span class="card">{{ card }}</span>
+            {% endfor %}
+        </div>
+
     </main>
 {% endblock %}
