--- a/templates/card/deck.html.twig
+++ b/templates/card/deck.html.twig
@@ -15,4 +15,8 @@
         {% endif %}
 
     </main>
+
+    <div class="aside aside-top">
+        {{ include('card/_nav.html.twig') }}
+    </div>
 {% endblock %}
