--- a/assets/styles/scss/partials/base/_base.scss
+++ b/assets/styles/scss/partials/base/_base.scss
@@ -36,11 +36,13 @@ body {
     width: 100%;
     max-width: 1000px;
     margin: 0 auto;
+    // flex: 1 0 auto;
 }
 
 .aside {
     width: 100%;
     max-width: 200px;
+    // flex: 0 0 auto;
 }
 
 .footer {
