--- a/assets/styles/scss/partials/responsive/_base.scss
+++ b/assets/styles/scss/partials/responsive/_base.scss
@@ -13,6 +13,10 @@
 
 
 @media (max-width: 1150px) {
+    .content-wrapper {
+        flex-direction: column;
+    }
+
     .aside-bottom {
         max-width: 700px;
         margin: 0 auto;
