--- a/templates/card/deck_shuffle.html.twig
+++ b/templates/card/deck_shuffle.html.twig
@@ -14,4 +14,8 @@
             <p>Kortleken är tom. Gå till <a href="{{ path('card_start') }}">start</a> för att skapa en ny.</p>
         {% endif %}
     </main>
+
+    <div class="aside aside-top">
+        {{ include('card/_nav.html.twig') }}
+    </div>
 {% endblock %}
