--- a/templates/card/deck_draw.html.twig
+++ b/templates/card/deck_draw.html.twig
@@ -15,6 +15,8 @@
         {% else %}
             <p>Kortleken är tom. Gå till <a href="{{ path('card_start') }}">start</a> för att skapa en ny.</p>
         {% endif %}
+
+        {{ include('flash.html.twig') }}
     </main>
 
     <div class="aside aside-top">
