--- a/templates/card/deck_draw.html.twig
+++ b/templates/card/deck_draw.html.twig
@@ -30,7 +30,7 @@
                     dra 10 kort
                 </a>
                 eller att dra
-                <a href="{{ path('card_deck_draw_players', {'players': 2, 'cards': 5}) }}">
+                <a href="{{ path('card_deck_deal', {'players': 2, 'cards': 5}) }}">
                     5 kort till två spelare
                 </a>
             </p>
