--- a/assets/styles/scss/partials/containers.scss
+++ b/assets/styles/scss/partials/containers.scss
@@ -3,3 +3,9 @@
 .container {
     padding-bottom: var.$baseline;
 }
+
+.container-flex {
+    display: flex;
+    gap: var.$baseline;
+    // justify-content: space-between;
+}
