--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -441,7 +441,7 @@ pre code {
   line-height: 1.4;
 }
 
-.form label, .header-xs, .header-sm, h4,
+.form label, .label-small, .header-xs, .header-sm, h4,
 .header-m, h3,
 .header-lg, h2, h1 {
   font-family: "Josefin Sans", sans-serif;
@@ -572,6 +572,12 @@ picture {
   font-size: 40px;
 }
 
+.label-small, .form label {
+  display: block;
+  margin-bottom: 0.35rem;
+  font-weight: 300;
+}
+
 .form {
   display: flex;
   flex-direction: column;
@@ -580,11 +586,6 @@ picture {
   font-size: 1rem;
   margin: 0;
   margin-bottom: 1.4rem;
-}
-.form label {
-  display: block;
-  margin-bottom: 0.35rem;
-  font-weight: 300;
 }
 .form input {
   width: 100%;
@@ -613,6 +614,21 @@ picture {
 .form input:focus,
 .form textarea:focus {
   outline: 2px solid #A17317;
+}
+
+.input-small {
+  width: 100px;
+  padding: 0.7rem;
+  border: 1px solid #A17317;
+  border-radius: 3px;
+  font-family: inherit;
+  background-color: transparent;
+  color: inherit;
+  margin-bottom: 1.4rem;
+}
+
+.label-small {
+  margin: 0;
 }
 
 .button {
@@ -659,6 +675,10 @@ picture {
   margin-bottom: 1.4rem;
 }
 
+.btn-api {
+  margin-bottom: 1.4rem;
+}
+
 .flash-notice {
   padding: 0.5em;
   color: #004085;
@@ -685,6 +705,11 @@ picture {
 
 .container {
   padding-bottom: 1.4rem;
+}
+
+.container-flex {
+  display: flex;
+  gap: 1.4rem;
 }
 
 @media (max-width: 900px) {
