--- a/templates/card/deck_draw.html.twig
+++ b/templates/card/deck_draw.html.twig
@@ -1,13 +1,13 @@
 {% extends "base.html.twig" %}
 
 {% block body %}
-    <main class="main text-container">
+    <main class="main">
         <h1>{{ pageTitle }}</h1>
 
         {% if hand %}
-            <div class="container">
+            <div class="cards">
                 {% for card in hand %}
-                    <span class="card">{{ card }}</span>
+                    <span class="card">{{ card|raw }}</span>
                 {% endfor %}
             </div>
             <div class="container">
