--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -5,6 +5,7 @@
 // @use "partials/backgrounds";
 @use "partials/images";
 @use "partials/dice";
+@use "partials/cards";
 @use "partials/form";
 @use "partials/buttons";
 @use "partials/flash";
