--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -572,6 +572,18 @@ picture {
   font-size: 40px;
 }
 
+.cards {
+  display: flex;
+  flex-flow: row wrap;
+  gap: 1.4rem;
+  margin-bottom: 2.8rem;
+}
+
+.card {
+  font-size: 100px;
+  margin-bottom: -40px;
+}
+
 .label-small, .form label {
   display: block;
   margin-bottom: 0.35rem;
