Update logic about deck and session
/card route creates a new deck if missing in session.
/card/deck/shuffle always creates a new deck.
other routes redirect to /card if deck is missing in session.

--- a/templates/card/_nav.html.twig
+++ b/templates/card/_nav.html.twig
@@ -2,7 +2,7 @@
 
 <ul>
     <li><a href="{{ path('card_start') }}">start</a></li>
-    <li><a href="{{ path('card_deck') }}">sorterad kortlek</li>
-    <li><a href="{{ path('card_deck_shuffle') }}">blandad kortlek</li>
+    <li><a href="{{ path('card_deck') }}">sortera kortlek</li>
+    <li><a href="{{ path('card_deck_shuffle') }}">blanda kortlek</li>
     <li><a href="{{ path('card_deck_draw') }}">dra kort</li>
 </ul>
