--- a/templates/card/deck.html.twig
+++ b/templates/card/deck.html.twig
@@ -11,7 +11,7 @@
                 {% endfor %}
             </div>
         {% else %}
-            <p class="header-m">Kortleken är tom. Gå till <a href="{{ path('card_start') }}">start</a> för att skapa en ny.</p>
+            <p class="header-m">Kortleken är tom. Gå till <a href="{{ path('card_deck_shuffle') }}">blanda kortlek</a> för att skapa en ny.</p>
         {% endif %}
 
     </main>
