--- a/templates/card/deck_draw.html.twig
+++ b/templates/card/deck_draw.html.twig
@@ -16,8 +16,8 @@
         {% else %}
         <div class="container">
             <p class="header-m">Kortleken är tom. Gå till
-                <a href="{{ path('card_start') }}">
-                    start
+                <a href="{{ path('card_deck_shuffle') }}">
+                    balanda kortlek
                 </a>för att skapa en ny.
             </p>
         </div>
