--- a/assets/styles/scss/partials/base/_base.scss
+++ b/assets/styles/scss/partials/base/_base.scss
@@ -28,7 +28,8 @@ body {
     flex: 1 0 auto;
     padding: var.$baseline-x2;
     display: flex;
-    flex-wrap: wrap;
+    gap: var.$baseline-x2;
+    // flex-wrap: wrap;
     // gap: var.$baseline-x2;
 }
 
