--- a/assets/styles/scss/partials/responsive/_base.scss
+++ b/assets/styles/scss/partials/responsive/_base.scss
@@ -15,19 +15,29 @@
 @media (max-width: 1150px) {
     .content-wrapper {
         flex-direction: column;
+        gap: var.$baseline;
+    }
+
+    .main {
+        flex: 1 0 auto;
     }
 
     .aside-bottom {
+        flex: 0 0 auto;
         max-width: 700px;
         margin: 0 auto;
-        margin-top: var.$baseline-x2;
+        // margin-top: var.$baseline-x2;
     }
 
     .aside-top {
-        max-width: 700px;
-        margin: 0 auto;
-        margin-bottom: var.$baseline;
+        flex: 0 0 auto;
+        max-width: 100%;
+        // margin: 0 auto;
+        // margin-bottom: var.$baseline;
         order: -1; // move to top of page
+
+        display: flex;
+        justify-content: right;
 
         h2 {
             display: none;
