--- a/templates/card/deck_deal.html.twig
+++ b/templates/card/deck_deal.html.twig
@@ -23,7 +23,7 @@
             <div class="container">
                 <p class="header-m">Gå till
                     <a href="{{ path('card_deck_shuffle') }}">
-                        balanda kortlek
+                        blanda kortlek
                     </a>för att skapa en ny.
                 </p>
             </div>
