--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -32,6 +32,7 @@
                     <li><a href="{{ path('pig_start') }}">pig</a></li>
                     <li><a href="{{ path('session') }}">session</a></li>
                     <li><a href="{{ path('card_start') }}">card</a></li>
+                    <li><a href="{{ path('game_start') }}">game</a></li>
                 </ul>
             </nav>
         </header>
