Add doc path and templates

--- a/templates/game/_nav.html.twig
+++ b/templates/game/_nav.html.twig
@@ -3,4 +3,5 @@
 <ul>
     <li><a href="{{ path('game_start') }}">start</a></li>
     <li><a href="{{ path('game_play') }}">spela</li>
+    <li><a href="{{ path('game_doc') }}">dokumentation</li>
 </ul>
