--- a/templates/game/start.html.twig
+++ b/templates/game/start.html.twig
@@ -15,6 +15,8 @@
                 value="true"
             >Starta spel</button>
         </form>
+
+        <a href="{{ path('game_doc') }}">Dokumentation</a>
     </main>
 
     <div class="aside aside-top">
