--- a/templates/game/_nav.html.twig
+++ b/templates/game/_nav.html.twig
@@ -2,6 +2,6 @@
 
 <ul>
     <li><a href="{{ path('game_start') }}">start</a></li>
-    <li><a href="{{ path('game_play') }}">spela</li>
-    <li><a href="{{ path('game_doc') }}">dokumentation</li>
+    <li><a href="{{ path('game_play') }}">spela</a></li>
+    <li><a href="{{ path('game_doc') }}">dokumentation</a></li>
 </ul>
