--- a/assets/styles/scss/partials/_containers.scss
+++ b/assets/styles/scss/partials/_containers.scss
@@ -9,3 +9,10 @@
     gap: var.$baseline;
     // justify-content: space-between;
 }
+
+.container-frame {
+    padding: var.$baseline;
+    border: 1px solid var.$border-regular;
+    border-radius: 5px;
+    margin-bottom: var.$baseline;
+}
