--- a/assets/styles/scss/partials/typography/_typography.scss
+++ b/assets/styles/scss/partials/typography/_typography.scss
@@ -15,6 +15,13 @@
     margin: 0;
 }
 
+%headers-nav {
+    font-size: calc(1rem * math.pow(var.$scale-factor, 2));
+    font-weight: 300;
+    color: var.$color-nav-links;
+    text-transform: lowercase;
+}
+
 .site-header {
     .site-title {
         font-size: calc(1rem * math.pow(var.$scale-factor, 4));
@@ -23,10 +30,11 @@
     }
 
     .nav a {
-        font-size: calc(1rem * math.pow(var.$scale-factor, 2));
-        font-weight: 300;
-        color: var.$color-nav-links;
-        text-transform: lowercase;
+        @extend %headers-nav;
+        // font-size: calc(1rem * math.pow(var.$scale-factor, 2));
+        // font-weight: 300;
+        // color: var.$color-nav-links;
+        // text-transform: lowercase;
     }
 }
 
@@ -44,6 +52,11 @@
     line-height: 1.4;
     letter-spacing: 0.08em;
     color: var.$color-body;
+}
+
+.aside li {
+    @extend %headers-nav;
+    font-size: calc(1rem * math.pow(var.$scale-factor, 1));
 }
 
 .text-container {
@@ -120,6 +133,10 @@ ul {
 li {
     list-style: none;
     margin-bottom: var.$baseline-half;
+}
+
+.margin-b {
+    margin-bottom: var.$baseline;
 }
 
 // .introduction {
