Add doc for game 21

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -553,6 +553,10 @@ li {
   margin-bottom: 1.4rem;
 }
 
+.margin-b-x2 {
+  margin-bottom: 2.8rem;
+}
+
 .img {
   margin-bottom: 1.4rem;
   border-radius: 5px;
