--- a/assets/styles/scss/partials/typography/_typography.scss
+++ b/assets/styles/scss/partials/typography/_typography.scss
@@ -139,6 +139,10 @@ li {
     margin-bottom: var.$baseline;
 }
 
+.margin-b-x2 {
+    margin-bottom: var.$baseline-x2;
+}
+
 // .introduction {
 //     font-family: var.$font-header;
 //     font-weight: 500;
