--- a/templates/card/start.html.twig
+++ b/templates/card/start.html.twig
@@ -6,8 +6,8 @@
 
         {{ include('card/content/start.md')|markdown_to_html }}
 
-        <a href="{{ asset('img/UML-mvc-kmom02.svg') }}">
-            <img class="img" src="{{ asset('img/UML-mvc-kmom02.svg') }}" alt="UML klassdiagram">
+        <a href="{{ asset('img/uml/UML-mvc-kmom02.svg') }}">
+            <img class="img" src="{{ asset('img/uml/UML-mvc-kmom02.svg') }}" alt="UML klassdiagram">
         </a>
 
     </main>
