--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -585,15 +585,19 @@ picture {
 }
 
 .cards {
+  width: 100%;
   display: flex;
   flex-flow: row wrap;
   gap: 1.4rem;
-  margin-bottom: 2.8rem;
+  margin-bottom: 1.4rem;
+}
+.cards .right {
+  margin-left: auto;
 }
 
 .card {
   font-size: 100px;
-  margin-bottom: -40px;
+  margin-bottom: -20px;
 }
 
 .label-small, .form label {
@@ -741,6 +745,25 @@ picture {
   border: 1px solid #A17317;
   border-radius: 5px;
   margin-bottom: 1.4rem;
+}
+
+.container-game-board-21 {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  min-height: 50vh;
+  border: 1px solid #A17317;
+  border-radius: 10px;
+  padding: 1.4rem;
+  margin-bottom: 2.8rem;
+}
+
+.container-game-middle {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  gap: 1.4rem;
+  align-items: center;
 }
 
 @media (max-width: 900px) {
