--- a/assets/styles/scss/partials/_containers.scss
+++ b/assets/styles/scss/partials/_containers.scss
@@ -16,3 +16,22 @@
     border-radius: 5px;
     margin-bottom: var.$baseline;
 }
+
+.container-game-board-21 {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    min-height: 50vh;
+    border: 1px solid var.$border-regular;
+    border-radius: 10px;
+    padding: var.$baseline;
+    margin-bottom: var.$baseline-x2;
+}
+
+.container-game-middle {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    gap: var.$baseline;
+    align-items: center;
+}
